--- a/PyCitySchools/Starter_Code/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/Starter_Code/PyCitySchools/PyCitySchools_starter.ipynb
@@ -1,22 +1,37 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# PyCity Schools Analysis\n",
     "\n",
-    "* As a whole, schools with higher budgets, did not yield better test results. By contrast, schools with higher spending 645-675 per student actually underperformed compared to schools with smaller budgets (585 per student).\n",
+    "The dataset is a table of information about various high schools, including the type of school (district or charter), the number of students, the total school budget, the per student budget, the average math and reading scores, and the percentage of students passing math, reading, and overall. The data was analyzed in order to draw conclusions about the relationship between different factors, such as school type, budget, and student performance.  \n",
     "\n",
-    "* As a whole, smaller and medium sized schools dramatically out-performed large sized schools on passing math performances (89-91% passing vs 67%).\n",
+    "The data suggests: \n",
     "\n",
-    "* As a whole, charter schools out-performed the public district schools across all metrics. However, more analysis will be required to glean if the effect is due to school practices or the fact that charter schools tend to serve smaller student populations per school. \n",
-    "---"
+    "* Charter schools on average have better results when compared to district schools, this can be seen by the higher percentage of passing rates across math, reading and overall passing rate. This could be due to the fact that charter schools have more autonomy in terms of curriculum and budget, which may lead to better educational outcomes.\n",
+    "\n",
+    "* Overall, this data suggests that schools with a high per student budget, high total school budget and being a charter school are positively correlated with better educational outcomes in terms of passing rate and scores.\n",
+    "\n",
+    "It's important to note that these conclusions are drawn based on the data provided, which could be incomplete or not fully representative of the schools, thus these conclusions should be taken with a grain of salt and further data should be analyzed to support or refute these conclusions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +159,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 200,
+     "execution_count": 307,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +240,7 @@
        "24649428"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +262,7 @@
        "78.98537145774827"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 311,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +284,7 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 312,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +307,7 @@
        "74.9808526933878"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +330,7 @@
        "85.80546336482001"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +353,7 @@
        "65.17232575950983"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 315,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +427,7 @@
        "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 209,
+     "execution_count": 316,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +490,7 @@
        "Name: type, dtype: object"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 317,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +527,7 @@
        "Name: school_name, dtype: int64"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 318,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +578,7 @@
        "Name: math_score, dtype: float64"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +820,7 @@
        "[29370 rows x 11 columns]"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1065,7 @@
        "[33610 rows x 11 columns]"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1312,7 @@
        "[25528 rows x 11 columns]"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1352,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 324,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1353,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -1643,7 +1658,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 218,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1680,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 326,
    "metadata": {
     "scrolled": true
    },
@@ -1812,7 +1827,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 219,
+     "execution_count": 326,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1837,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -1967,7 +1982,7 @@
        "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 220,
+     "execution_count": 327,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1991,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -2150,7 +2165,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 328,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2195,7 +2210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
@@ -2354,7 +2369,7 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 329,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2400,7 +2415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2411,7 +2426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2421,16 +2436,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fc1a1a7a250>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fc18aa8a910>"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 332,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2446,7 +2461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2460,7 +2475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
@@ -2566,7 +2581,7 @@
        "$645-680                                      53.526855  "
       ]
      },
-     "execution_count": 229,
+     "execution_count": 334,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2588,7 +2603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2599,7 +2614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -2922,7 +2937,7 @@
        "Wright High School     Medium (1000-2000)  "
       ]
      },
-     "execution_count": 232,
+     "execution_count": 336,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2938,7 +2953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2952,7 +2967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 338,
    "metadata": {
     "scrolled": true
    },
@@ -3036,7 +3051,7 @@
        "Large (2000-5000)               82.766634             58.286003  "
       ]
      },
-     "execution_count": 235,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3061,7 +3076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3082,7 +3097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -3154,7 +3169,7 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 238,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
